# isomage

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.test-tools  HANDOFF.md  LICENSE  Makefile  README.md  SECURITY.md  install.sh
.claude/skills/: promptlog.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  release.yml  test-tools-image.yml
benches/: seqread.rs
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz_targets/: gpt_parse_header_sector.rs  mbr_parse_sector.rs
prompts/: 20260511-201219-introduce-promptlog-pattern.md  20260511-202611-agent-first-readme-and-v1.md  20260511-202906-address-copilot-review.md  20260512-060014-v1.1.0-security-and-lib-hygiene.md  20260512-060311-broaden-ci-and-ship-completions.md  20260512-060553-changelog-security-templates.md  20260512-064033-library-only-refactor.md  20260512-064033-polish-readme-changelog-templates.md  20260512-064033-security-and-lib-hygiene.md  20260512-193754-v3-scope-expansion.md  20260512-210223-round-trip-harness.md  20260512-214616-validation-polish.md  20260512-215107-fuzz-stubs.md  20260512-220130-docker-tool-venue.md  20260512-221032-ci-feedback-fixes.md  20260512-223810-parser-entry-generic.md  20260512-235500-fat-reader.md  20260512-235900-ext-reader.md  20260513-000100-squashfs-reader.md  20260513-000200-vhd-reader.md  20260513-000300-vmdk-reader.md  20260513-000400-qcow2-reader.md  20260513-000500-ntfs-reader.md  20260513-000600-hfsplus-reader.md  20260513-000700-wim-reader.md  20260513-000800-dmg-reader.md  20260513-000900-apfs-reader.md  20260513-120000-coverage-improvements-and-bugfixes.md  20260513-140000-coverage-zip-tar-ext.md  20260513-150000-v2-1-0-release.md  20260513-160000-coverage-raw-squashfs-hfsplus.md  20260513-163448-pr9-review-fixes.md  20260513-170000-coverage-udf.md  20260513-180000-coverage-apfs-vmdk-lib.md  20260513-180000-ext-copilot-fixes.md  20260513-180100-vmdk-copilot-fixes.md  20260513-180200-wim-copilot-fixes.md  20260513-180300-dmg-copilot-fixes.md  20260513-180400-apfs-copilot-fixes.md  20260513-180500-ntfs-copilot-fixes.md  (+37 more)
scripts/: check_promptlog.sh  install-hooks.sh
src/: ext2.rs  iso9660.rs  lib.rs  main.rs  tree.rs  udf.rs
src/formats/: apfs.rs  dmg.rs  ext.rs  fat.rs  gpt.rs  hfsplus.rs  mbr.rs  mod.rs  ntfs.rs  qcow2.rs  raw.rs  squashfs.rs  tar.rs  vhd.rs  vmdk.rs  wim.rs  zip.rs
src/image_io/: mmap.rs  mod.rs
src/simd/: crc.rs  mod.rs
test_data/: test_linux.iso  test_macos.iso
tests/: README.md  apfs_round_trip.rs  dmg_round_trip.rs  ext_round_trip.rs  fat_round_trip.rs  gpt_round_trip.rs  harness_self_test.rs  hfsplus_round_trip.rs  mbr_round_trip.rs  mmap_parity.rs  ntfs_round_trip.rs  qcow2_round_trip.rs  squashfs_round_trip.rs  tar_round_trip.rs  tar_write_round_trip.rs  vhd_round_trip.rs  vmdk_round_trip.rs  wim_round_trip.rs  zip_round_trip.rs  zip_write_round_trip.rs
tests/common/: assertions.rs  binaries.rs  mod.rs  round_trip.rs  snapshot.rs  tool.rs  venue.rs
tests/snapshots/: gpt-single-named.snap  mbr-single-linux.snap
