[package]
name = "isomage"
version = "2.0.0"
edition = "2021"
rust-version = "1.74"
license = "MIT"
authors = ["Jack Danger <github@jackdanger.com>"]
description = "Pure-Rust reader for ISO 9660 (Joliet, Rock Ridge) and UDF disc images. Read-only, no mount, no FUSE."
repository = "https://github.com/JackDanger/isomage"
homepage = "https://github.com/JackDanger/isomage"
documentation = "https://docs.rs/isomage"
keywords = ["iso", "iso9660", "udf", "bluray", "filesystem"]
categories = ["filesystem", "parser-implementations"]
readme = "README.md"
# Restrict the crates.io upload to source + manifests + license + curated
# docs. Tests, prompt logs, .claude/, scripts, and the Makefile stay in
# the git repo but are not published.
include = [
    "/src/**/*.rs",
    "/Cargo.toml",
    "/Cargo.lock",
    "/CHANGELOG.md",
    "/LICENSE",
    "/README.md",
]

[lib]
name = "isomage"
path = "src/lib.rs"

# No dependencies. isomage parses the disc image bytes itself; the only
# crate it ever pulled in was clap, which was solely for the CLI.
[dependencies]

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
