# The crate is intentionally NOT a workspace root — but modern
# cargo auto-detects subdirectory Cargo.tomls (e.g. fuzz/Cargo.toml)
# as potential workspace members. The explicit `[workspace]` block
# below declares the main crate as the only member and excludes
# `fuzz/` so cargo from the repo root resolves features against
# `isomage` only. The fuzz subcrate is its own standalone workspace.
[workspace]
members = ["."]
exclude = ["fuzz"]

[package]
name = "isomage"
version = "2.0.0"
edition = "2021"
rust-version = "1.74"
license = "MIT"
authors = ["Jack Danger <github@jackdanger.com>"]
description = "Pure-Rust reader for ISO 9660 (Joliet, Rock Ridge) and UDF disc images. Read-only, no mount, no FUSE."
repository = "https://github.com/JackDanger/isomage"
homepage = "https://github.com/JackDanger/isomage"
documentation = "https://docs.rs/isomage"
keywords = ["iso", "iso9660", "udf", "bluray", "filesystem"]
categories = ["filesystem", "parser-implementations"]
readme = "README.md"
# Restrict the crates.io upload to source + manifests + license + curated
# docs. Tests, prompt logs, .claude/, scripts, and the Makefile stay in
# the git repo but are not published.
include = [
    "/src/**/*.rs",
    "/Cargo.toml",
    "/Cargo.lock",
    "/CHANGELOG.md",
    "/LICENSE",
    "/README.md",
]

[lib]
name = "isomage"
path = "src/lib.rs"

# Default features: ISO 9660 + UDF read. Zero runtime deps.
# v3.0 introduces a feature flag matrix so individual format / perf
# code paths can opt into deps without imposing them on every build.
# See prompts/20260512-193754-v3-scope-expansion.md for the design.
[features]
default = ["iso", "udf"]

# Core formats. These need no deps and are pure-Rust; toggleable so
# downstream users can shrink the build.
iso = []
udf = []

# Phase 3 formats. Each is a per-module flag; flags compose so
# enabling `raw` pulls in MBR + GPT walking.
raw = ["mbr", "gpt"]
mbr = []
gpt = []
vhd = []
vhdx = []
vmdk = []
qcow2 = []
wim = []
dmg = []
fat = []
exfat = []
ntfs = []
ext = []
hfsplus = []
squashfs = []
apfs = []

# Performance opt-ins. Both gate `unsafe`; default build is safe-only.
mmap = ["dep:memmap2"]     # memmap2 + MmapImage. Adds runtime dep when enabled.
simd = []                   # Fast CRC (currently scalar; SIMD intrinsics planned).

# Codec opt-ins. Names mirror likely crate choices; no deps wired
# until the first format that needs them lands.
deflate-gzippy = []   # User-named "gzippy". Crate name TBD; see prompt log.
lzma = []
zstd = []
bzip2 = []
lz4 = []

# Write APIs (Phase 4). Gates the create/build/write entry points.
# Each individual write target stays behind `experimental` until its
# round-trip test against the reference tool passes in CI.
write = []
experimental = []

[dependencies]
# Default feature set still pulls zero runtime crates. memmap2 is
# only built when `--features mmap` is requested by the consumer.
# Rationale: kernel page-cache prefetch + zero-copy slices via
# RandomAccess are the lowest-risk wins toward beating 7-Zip on
# sequential reads.
memmap2 = { version = "0.9", optional = true }

[dev-dependencies]
# Dev-deps never leak to downstream users via Cargo.toml. Bench
# harness lives in benches/seqread.rs; the round-trip test harness
# in tests/common/ uses tempfile for RAII tempdir cleanup.
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "seqread"
harness = false

# Per-format round-trip tests are gated on their format feature so
# `cargo test --no-default-features --features iso,udf` doesn't try
# to compile e.g. tests/mbr_round_trip.rs (which references
# `isomage::formats::mbr`, only built under --features mbr).
[[test]]
name = "mbr_round_trip"
required-features = ["mbr"]

[[test]]
name = "gpt_round_trip"
required-features = ["gpt"]

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
